--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -48,7 +48,7 @@
   </p>
 
   <h3>
-    2. What Kind of Information We Collect
+    2. What Kind of Information We Collect (Mentioned directly on the app)
   </h3>
   <p>
     In providing Application, we collect, store and use the following
@@ -61,33 +61,33 @@
   </p>
   <ul>
     <li>
-      information you make available to us when you open a Apps(of SunSGame LLC.) account or use
+      a. information you make available to us when you open a Apps(of SunSGame LLC.) account or use
       another service (Twitter，Facebook, Google), such as your name, email address;
     </li>
 
     <li>
-      Any information included in your publicly visible Application profile,
+      b. Any information included in your publicly visible Application profile,
       which may include your profile ID, name and photo;
     </li>
 
     <li>
-      information you make available to us and/or public via your use of
+      c. information you make available to us and/or public via your use of
       Application and/or another service which you use to open your Apps(of SunSGame LLC.)
       account;
     </li>
 
     <li>
-      information made available by another user about you via their use of
+      d. information made available by another user about you via their use of
       Application;
     </li>
 
     <li>
-      Information we collect as you use Application, such as certain Location
+      e. Information we collect as you use Application, such as certain Location
       Data and Log Data.
       <ul>
         <li>
           <p>
-            "Location Data" is information that we collect regarding your
+           1. "Location Data" is information that we collect regarding your
             location (when you use a location-enabled service), including:
           </p>
 
@@ -112,7 +112,7 @@
         </li>
 
         <li>
-          "Log Data" is technical information that is automatically collected
+          2. "Log Data" is technical information that is automatically collected
           by us when you use Application, whether through the use of cookies,
           web beacons, log files, scripts and e-tags or otherwise, including:
           Technical information, such as your mobile carrier-related
@@ -124,25 +124,25 @@
     </li>
   </ul>
   <p>
-    Information about what you have searched for and looked at while using
+    g.Information about what you have searched for and looked at while using
     Application, such as web search terms used, social media profiles visited
     and details of other information and content accessed or requested by you
     in using Application;
   </p>
 
   <p>
-    Information about communications you have made using Application, such as
+    h. Information about communications you have made using Application, such as
     the people you've communicated with and the time, data and duration of
     your communications; and
   </p>
 
   <p>
-    Metadata, which means information related to ps you have made available
+    t. Metadata, which means information related to ps you have made available
     through Application, such as the date, time or location that a shared
     photograph or video was taken or posted.
   </p>
   <p>
-    The app does use third party services that may collect
+    m. The app does use third party services that may collect
     information used to identify you.
   </p>
   <p>
@@ -544,7 +544,7 @@
     relevant information as quickly as possible. If you believe that we might
     have any information from a child under 13(or such legally required age of
     consent for Juveniles as defined under applicable laws), please contact us
-    at sunsgamesstudio@gmail.com.
+    at sunsgamesstudio@gmail.com
   </p>
   <h3>
     13. Contacting Us
@@ -553,7 +553,7 @@
     If you have any questions or comments about this Policy or our privacy
     practices, or to report any violations of the Policy or abuse of an
     Application, the Services or the Site, please contact us at
-    sunsgamesstudio@gmail.com..
+    sunsgamesstudio@gmail.com
   </p>
   <h3>
     14. Changes to This Privacy Policy
