--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h1 style="text-align: center;">&nbsp;</h1>
-<h1 style="text-align: center;"><span style="color: #0000ff;"><u>Karta Studio</u></span></h1>
+<h1 style="text-align: center;"><span style="color: #0000ff;"><u>SunSGame LLC</u></span></h1>
 <h2 style="text-align: center;">Coming soon...</h2>
 <br>
 <h2 style="text-align: center;"><p></p></h2>
