update Privacy Policy
update Privacy Policy

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -7,19 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="This Privacy Policy applies beginning September 9, 2020. You may change your consent anytime in our App Settings. Apps(of SunSGame LLC. in Google Play Store) (or "
+    content="This Privacy Policy applies beginning September 9, 2020. You may change your consent anytime in our App Settings. Apps(of SunSGame LLC in Google Play Store) (or "
     we")="" collects="" information="" from="" you="" in="" order="" to="" provide="" better="" service="" and=""
     give="" a="" user="" experience.="" we="" always="" put="" your="" privacy="" as="" the="" first="" consideration=""
     policy="" explains="" how="" collect,="" use,="" protect="" information."="">
-  <title>Privacy Policy Apps(of SunSGame LLC.)</title>
+  <title>Privacy Policy Apps(of SunSGame LLC)</title>
 </head>
 
 <body>
-  <h2>Apps(of SunSGame LLC.)</h2>
+  <h2>Apps(of SunSGame LLC)</h2>
   <h1>Privacy Policy</h1>
   <p>
     This Privacy Policy applies beginning September 9, 2020. You may change your
-    consent anytime in our App Settings. Apps(of SunSGame LLC.)(or "we", or "Apps" or "SunSGame LLC.") collects
+    consent anytime in our App Settings. Apps(of SunSGame LLC)(or "we", or "Apps" or "SunSGame LLC") collects
     information
     from you in order to provide better service and give you a better user
     experience. We always put your privacy as the first consideration and
@@ -30,7 +30,7 @@
 
   <h3>1. Data controller and representative</h3>
   <p>
-    Apps(of SunSGame LLC.), and its subsidiaries* (or "we", or "our" or "us" or "Apps" or "SunSGame LLC.")
+    Apps(of SunSGame LLC), and its subsidiaries* (or "we", or "our" or "us" or "Apps" or "SunSGame LLC")
     cares about the privacy of your personal information and is committed to
     protecting it. We may have to collect your personal data to provide you
     with the best and the most up-to-date security. We do not take
@@ -41,8 +41,8 @@
   </p>
 
   <p>
-    The Apps(of SunSGame LLC.) Privacy Policy applies to all app by SunSGame LLC. and unless
-    specified, its subsidiaries, including all app by SunSGame LLC. and any contractors,
+    The Apps(of SunSGame LLC) Privacy Policy applies to all app by SunSGame LLC and unless
+    specified, its subsidiaries, including all app by SunSGame LLC and any contractors,
     representatives, agents, and resellers while they are working on our
     behalf (collectively "we," "us" or "our" or Apps).
   </p>
@@ -61,7 +61,7 @@
   </p>
   <ul>
     <li>
-      a. information you make available to us when you open a Apps(of SunSGame LLC.) account or use
+      a. information you make available to us when you open a Apps(of SunSGame LLC) account or use
       another service (Twitter，Facebook, Google), such as your name, email address;
     </li>
 
@@ -72,7 +72,7 @@
 
     <li>
       c. information you make available to us and/or public via your use of
-      Application and/or another service which you use to open your Apps(of SunSGame LLC.)
+      Application and/or another service which you use to open your Apps(of SunSGame LLC)
       account;
     </li>
 
@@ -87,7 +87,7 @@
       <ul>
         <li>
           <p>
-           1. "Location Data" is information that we collect regarding your
+            1. "Location Data" is information that we collect regarding your
             location (when you use a location-enabled service), including:
           </p>
 
@@ -164,7 +164,7 @@
   <ul>
     <li>
       Provide Application and Services (and the features within Application)
-      to you, such as to show to other users in Apps(of SunSGame LLC.) such as your connected
+      to you, such as to show to other users in Apps(of SunSGame LLC) such as your connected
       friends or other users on the platform;
     </li>
     <li>
@@ -372,7 +372,7 @@
     used.
     These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated
     not to disclose or use it for any other purpose.</p>
-  
+
   <h3>Analytics and Database save User Informations</h3>
   <p>We may use third-party Service Providers to monitor analyse and database the use of our Service.</p>
   <ul>
@@ -406,35 +406,50 @@
           rel="external nofollow noopener" target="_blank">https://support.google.com/accounts/answer/112802#</a>
       </p>
     </li>
-    <li><p><strong>Amazon</strong></p>
-      <p>Their Privacy Policy can be viewed at<a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201909010"
-          rel="external nofollow noopener" target="_blank">https://www.amazon.com/gp/help/customer/display.html?nodeId=201909010</a>
-      </p></li>
-    <li><p><strong>Twitter，Facebook</strong></p>
-      <p>Their Privacy Policy can be viewed at<a href="https://twitter.com/en/privacy"
-          rel="external nofollow noopener" target="_blank">https://twitter.com/en/privacy</a>
+    <li>
+      <p><strong>Amazon</strong></p>
+      <p>Their Privacy Policy can be viewed at<a
+          href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201909010" rel="external nofollow noopener"
+          target="_blank">https://www.amazon.com/gp/help/customer/display.html?nodeId=201909010</a>
+      </p>
+    </li>
+    <li>
+      <p><strong>Twitter，Facebook</strong></p>
+      <p>Their Privacy Policy can be viewed at<a href="https://twitter.com/en/privacy" rel="external nofollow noopener"
+          target="_blank">https://twitter.com/en/privacy</a>
       </p>
       <p>Their Privacy Policy can be viewed at<a href="https://www.facebook.com/legal/FB_Work_Privacy"
-        rel="external nofollow noopener" target="_blank">https://www.facebook.com/legal/FB_Work_Privacy</a>
-    </p>
+          rel="external nofollow noopener" target="_blank">https://www.facebook.com/legal/FB_Work_Privacy</a>
+      </p>
     </li>
   </ul>
 
   <h3>Advertising</h3>
   <p>We may use third-party Service Providers to show advertisements to you to help support and maintain our Service.
   </p>
+  <p>
+    For European Union’s General Data Protection Regulation (GDPR). If App not show dialog consent and you is user
+    European please exit and remove app.
+    If you continue to use it, by default you accept all possible risks to your information. SunSGame LLC will not be
+    responsible for your information.
+  </p>
   <ul>
     <li>
-      <p><strong>Google AdSense &amp; DoubleClick Cookie</strong></p>
+      <p><strong>a1. Google AdSense &amp; DoubleClick Cookie</strong></p>
       <p>Google, as a third party vendor, uses cookies to serve ads on our Service. Google's use of the DoubleClick
         cookie enables it and its partners to serve ads to our users based on their visit to our Service or other
         websites on the Internet.</p>
       <p>You may opt out of the use of the DoubleClick Cookie for interest-based advertising by visiting the Google Ads
         Settings web page: <a href="https://adssettings.google.com/" rel="external nofollow noopener"
           target="_blank">https://adssettings.google.com/</a></p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://support.google.com/adsense/answer/7666366?hl=en" rel="external nofollow noopener"
+          target="_blank">https://support.google.com/adsense/answer/7666366?hl=en</a>
+      </p>
+
     </li>
     <li>
-      <p><strong>AdMob by Google</strong></p>
+      <p><strong>a2. AdMob by Google</strong></p>
       <p>AdMob by Google is provided by Google Inc.</p>
       <p>You can opt-out from the AdMob by Google service by following the instructions described by Google:
         <a href="https://support.google.com/ads/answer/2662922" rel="external nofollow noopener"
@@ -445,27 +460,68 @@
           target="_blank">https://policies.google.com/technologies/partner-sites</a> or visit the Privacy Policy of
         Google: <a href="https://policies.google.com/privacy" rel="external nofollow noopener"
           target="_blank">https://policies.google.com/privacy</a></p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://support.google.com/admob/answer/7666366?hl=en" rel="external nofollow noopener"
+          target="_blank">https://support.google.com/admob/answer/7666366?hl=en</a>
+      </p>
     </li>
     <li>
-      <p><strong>Ads by Amazon</strong></p>
+      <p><strong>a3. Ads by Amazon</strong></p>
       <p>Their Privacy Policy can be viewed at
         <a href="https://advertising.amazon.com/resources/ad-policy/en/gdpr#:~:text=Privacy.,to%20serve%20interest%2Dbased%20ads."
           rel="external nofollow noopener"
           target="_blank">https://advertising.amazon.com/resources/ad-policy/en/gdpr#:~:text=Privacy.,to%20serve%20interest%2Dbased%20ads.</a>
       </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://aws.amazon.com/compliance/gdpr-center/" rel="external nofollow noopener"
+          target="_blank">https://aws.amazon.com/compliance/gdpr-center/</a>
+      </p>
+
     </li>
     <li>
-      <p><strong>Ads by mopub</strong></p>
+      <p><strong>a4. Ads by Mopub</strong></p>
       <p>Their Privacy Policy can be viewed at
         <a href="https://www.mopub.com/en/legal/privacy" rel="external nofollow noopener"
           target="_blank">https://www.mopub.com/en/legal/privacy</a>
       </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://www.mopub.com/en/gdpr" rel="external nofollow noopener" target="_blank">
+          https://www.mopub.com/en/gdpr</a>
+
+      </p>
     </li>
     <li>
-      <p><strong>Ads by Unity</strong></p>
+      <p><strong>a5. Ads by ChartBoost</strong></p>
+      <p>Their Privacy Policy can be viewed at
+        <a href="https://answers.chartboost.com/en-us/articles/200780269" rel="external nofollow noopener"
+          target="_blank">https://answers.chartboost.com/en-us/articles/200780269</a>
+      </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://answers.chartboost.com/en-us/articles/115001489613" rel="external nofollow noopener"
+          target="_blank">https://answers.chartboost.com/en-us/articles/115001489613</a>
+      </p>
+    </li>
+    <li>
+      <p><strong>a6. Ads by Vungle</strong></p>
+      <p>Their Privacy Policy can be viewed at
+        <a href="https://vungle.com/privacy/" rel="external nofollow noopener"
+          target="_blank">https://vungle.com/privacy/</a>
+      </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://vungle.com/gdpr-faq/" rel="external nofollow noopener" target="_blank">
+          https://vungle.com/gdpr-faq/</a>
+      </p>
+    </li>
+    <li>
+      <p><strong>a7. Ads by Unity</strong></p>
       <p>Their Privacy Policy can be viewed at <a href=" https://unity3d.com/legal/privacy-policy"
           rel="external nofollow noopener" target="_blank"> https://unity3d.com/legal/privacy-policy</a>
       </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://unity3d.com/legal/gdpr" rel="external nofollow noopener" target="_blank">
+          https://unity3d.com/legal/gdpr</a>
+      </p>
+
     </li>
   </ul>
 
@@ -534,10 +590,10 @@
     12.Children's Information
   </h3>
   <p>
-    Apps(of SunSGame LLC.) does not knowingly collect any personal identification information
+    Apps(of SunSGame LLC) does not knowingly collect any personal identification information
     from children under the age of 13 (or such legally required age of consent
     for Juveniles as defined under applicable laws) or knowingly allow such
-    person to register on Apps(of SunSGame LLC.). In the event that we are notified that we have
+    person to register on Apps(of SunSGame LLC). In the event that we are notified that we have
     collect personal information from a child under the age of 13 (or such
     legally required age of consent for Juveniles as defined under applicable
     laws) without parental consent, we will suspend the account and delete
