--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -6,22 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description"
-    content="This Privacy Policy applies beginning September 9, 2020. You may change your consent anytime in our App Settings. Apps(of SunSGame LLC.) (or "
+    content="This Privacy Policy applies beginning September 9, 2020. You may change your consent anytime in our App Settings. Apps(of SunSGame LLC) (or "
     we")="" collects="" information="" from="" you="" in="" order="" to="" provide="" better="" service="" and=""
     give="" a="" user="" experience.="" we="" always="" put="" your="" privacy="" as="" the="" first="" consideration=""
     policy="" explains="" how="" collect,="" use,="" protect="" information."="">
-  <title>User License Agreement Apps(of SunSGame LLC.)</title>
+  <title>User License Agreement Apps(of SunSGame LLC)</title>
 </head>
 
 <body>
-  <h2>Apps(of SunSGame LLC.)</h2>
+  <h2>Apps(of SunSGame LLC)</h2>
   <h1>User License and Terms of Service Agreement</h1>
   <p>Last Revised: September 9, 2020</p>
   <p>User License and Terms of Service Agreement is applicable to all app and services is managed and create by SunSGame
-    LLC.!</p>
+    LLC!</p>
   <h2>Preamble and Introduction</h2>
-  <p>Thank you for using App(s)(of SunSGame LLC.)(or "we" or "us" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
-    "App by SunSGame LLC." or "SunSGame LLC.") is app and services is managed and create by SunSGame LLC.!
+  <p>Thank you for using App(s)(of SunSGame LLC)(or "we" or "us" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
+    "App by SunSGame LLC" or "SunSGame LLC") is app and services is managed and create by SunSGame LLC!
     Note:NAMES or/and INDIVIDUALS THAT OVERLAP WITH US ARE NOT ON THIS SITE NOT OURS,
     We work in <a href="https://sunsgames.github.io/" rel="external nofollow noopener"
       target="_blank">https://sunsgames.github.io/</a>,
