--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -429,7 +429,7 @@
   </p>
   <p>
     For European Union’s General Data Protection Regulation (GDPR). If App not show dialog consent and you is user
-    European please exit and remove app.
+    European please clear data app and relaunch or exit and remove app.
     If you continue to use it, by default you accept all possible risks to your information. SunSGame LLC will not be
     responsible for your information.
   </p>
