--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -534,6 +534,17 @@
       </p>
 
     </li>
+    <li>
+      <p><strong>a9. Facebook Audience Network</strong></p>
+      <p>Their Privacy Policy can be viewed at <a href="https://www.facebook.com/policy.php"
+          rel="external nofollow noopener" target="_blank">https://www.facebook.com/policy.php</a>
+      </p>
+      <p>Their GDPR Privacy Policy can be viewed at
+        <a href="https://www.facebook.com/business/gdpr" rel="external nofollow noopener" target="_blank">
+          https://www.facebook.com/business/gdpr</a>
+      </p>
+
+    </li>
   </ul>
 
   <h3>Payments</h3>
