--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -28,7 +28,7 @@
     we work in https://sunsgames.github.io/,
   </p>
 
-  <h3>1. Data controller and representative</h3>
+  <h3>1. Data controller and representative (If used will be mentioned in the application)</h3>
   <p>
     Apps(of SunSGame LLC), and its subsidiaries* (or "we", or "our" or "us" or "Apps" or "SunSGame LLC")
     cares about the privacy of your personal information and is committed to
@@ -373,7 +373,7 @@
     These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated
     not to disclose or use it for any other purpose.</p>
 
-  <h3>Analytics and Database save User Informations</h3>
+  <h3>Analytics and Database save User Informations (If used will be mentioned in the application)</h3>
   <p>We may use third-party Service Providers to monitor analyse and database the use of our Service.</p>
   <ul>
     <li>
@@ -398,7 +398,7 @@
     </li>
   </ul>
 
-  <h3>Signin Login Signout Logout</h3>
+  <h3>Signin Login Signout Logout (If used will be mentioned in the application)</h3>
   <ul>
     <li>
       <p><strong>Google</strong></p>
@@ -424,7 +424,7 @@
     </li>
   </ul>
 
-  <h3>Advertising</h3>
+  <h3>Advertising (If used will be mentioned in the application)</h3>
   <p>We may use third-party Service Providers to show advertisements to you to help support and maintain our Service.
   </p>
   <p>
@@ -547,7 +547,7 @@
     </li>
   </ul>
 
-  <h3>Payments</h3>
+  <h3>Payments (If used will be mentioned in the application)</h3>
   <p>We may provide paid products and/or services within the Service. In that case, we use third-party services for
     payment processing (e.g. payment processors).</p>
   <p>We will not store or collect your payment card details. That information is provided directly to our third-party
