--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -21,7 +21,7 @@
     LLC!</p>
   <h2>Preamble and Introduction</h2>
   <p>Thank you for using App(s)(of SunSGame LLC)(or "we" or "us" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
-    "App by SunSGame LLC" or "SunSGame LLC") is app and services is managed and create by SunSGame LLC!
+    "App by SunSGame LLC" or "SunSGame LLC" or "SunSGame" or "SunSGame Ind" or "SunSGame Ind.") is app and services is managed and create by SunSGame LLC!
     Note:NAMES or/and INDIVIDUALS THAT OVERLAP WITH US ARE NOT ON THIS SITE NOT OURS,
     We work in <a href="https://sunsgames.github.io/" rel="external nofollow noopener"
       target="_blank">https://sunsgames.github.io/</a>,
