--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -222,6 +222,8 @@
     (q) remove or disassociate, from the Content and/or the App any copyright, trademark or other proprietary notices
     contained in such materials (such as ©,™, or ®); and/or
     (r) infringe and/or violate any of the Terms.
+    (s) wwhen refunding an application after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
+    
   </p>
 
   <h2>5. License to use our Apps</h2>
@@ -472,7 +474,7 @@
     information,
     content or features therein without giving prior notice. You agree that App does not assume any responsibility with
     respect to,
-    or in connection with the termination of the App operation and loss of any data.
+    or in connection with the termination of the App operation and loss of any data in App.
   </h2>
 </body>
 
