--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -476,6 +476,7 @@
     respect to,
     or in connection with the termination of the App operation and loss of any data in App.
   </h2>
+  <p>Modify:10/3/2020</p>
 </body>
 
 </html>
