--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -222,7 +222,7 @@
     (q) remove or disassociate, from the Content and/or the App any copyright, trademark or other proprietary notices
     contained in such materials (such as ©,™, or ®); and/or
     (r) infringe and/or violate any of the Terms.
-    (s) wwhen refunding an application after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
+    (s) when refunding an application after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
     
   </p>
 
