--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -222,8 +222,8 @@
     (q) remove or disassociate, from the Content and/or the App any copyright, trademark or other proprietary notices
     contained in such materials (such as ©,™, or ®); and/or
     (r) infringe and/or violate any of the Terms.
-    (s) when refunding an application after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
-    
+    (s) For App sold through the distributor either and/or directly and/or indirectly by us. When refunding an App after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
+    If you reuse when you refund the app the amount you compensate us will be charged = amount of the app sale x number of days you reuse.
   </p>
 
   <h2>5. License to use our Apps</h2>
@@ -476,7 +476,7 @@
     respect to,
     or in connection with the termination of the App operation and loss of any data in App.
   </h2>
-  <p>Modify:10/3/2020</p>
+  <p>Modify:10/4/2020</p>
 </body>
 
 </html>
