--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -574,6 +574,12 @@
           https://developers.ironsrc.com/ironsource-mobile/general/making-sure-youre-compliant-post-gdpr/</a>
       </p>
     </li>
+    <li>
+      <p><strong>a11. Ads by Tapjoy</strong></p>
+      <p>Their Privacy Policy can be viewed at <a href="https://www.tapjoy.com/legal/players/users-terms-of-service/"
+          rel="external nofollow noopener" target="_blank">https://www.tapjoy.com/legal/players/users-terms-of-service/</a>
+      </p>
+    </li>
   </ul>
 
   <h3>Payments (If used will be mentioned in the application)</h3>
