--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -20,8 +20,8 @@
   <p>User License and Terms of Service Agreement is applicable to all app and services is managed and create by SunSGame
     LLC!</p>
   <h2>Preamble and Introduction</h2>
-  <p>Thank you for using App(s)(of SunSGame LLC)(or "we" or "us" or "Game" or "Games" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
-    "App by SunSGame LLC" or "SunSGame LLC" or "SunSGame" or "SunSGame Ind" or "SunSGame Ind.") is app and services is managed and create by SunSGame LLC!
+  <p>Thank you for using App(s)(of/by SunSGame LLC)(or "we" or "us" or "Game" or "Games" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
+    "(of/by SunSGame LLC)" or "SunSGame LLC" or "SunSGame Ind" or "SunSGame Ind.") is app and services is managed and create by SunSGame LLC!
     Note:NAMES or/and INDIVIDUALS THAT OVERLAP WITH US ARE NOT ON THIS SITE NOT OURS,
     We work in <a href="https://sunsgames.github.io/" rel="external nofollow noopener"
       target="_blank">https://sunsgames.github.io/</a>,
@@ -224,7 +224,7 @@
     (r) infringe and/or violate any of the Terms.
     (s) For App sold through the distributor either and/or directly and/or indirectly by us. When refunding an App after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
     If you reuse when you refund the app the amount you compensate us will be charged = amount of the app sale x number of days you reuse.
-    (t);except for available functions of the device and/or operating system and/or by a (SDK) and/or third party. ideas and / or functions and / or features in the application are exclusively owned by SunSGame, for any purpose you may not steal and / or disseminate and / or reproduce ideas and functions. functionality and / or in-app features for third parties or / and are intended by you for the purpose of reproducing and / or rebuilding the application with the same idea and / or functionality and / or functionality as the intended application. owned by SunSGame.
+    (t);except for available functions of the device and/or operating system and/or by a (SDK) and/or third party. ideas and / or functions and / or features in the application are exclusively owned by SunSGame, for any purpose you may not steal and / or disseminate and / or reproduce ideas and functions. functionality and / or in-app features for third parties or / and are intended by you for the purpose of reproducing and / or rebuilding the application with the same idea and / or functionality and / or functionality as the intended application. owned by us.
   </p>
 
   <h2>5. License to use our Apps</h2>
