--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -15,11 +15,18 @@
 </head>
 
 <body>
-  <h2>Apps(of SunSGame LLC)</h2>
+  <h2>Apps(of/by SunSGame LLC)</h2>
   <h1>Privacy Policy</h1>
   <p>
     This Privacy Policy applies beginning September 9, 2020. You may change your
-    consent anytime in our App Settings. Apps(of SunSGame LLC)(or "we", or "Apps" or "SunSGame LLC") collects
+    consent anytime in our App Settings. Apps(of/by SunSGame LLC)
+    (or "we" or "us" or "Game" or "Games" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
+    "(of/by SunSGame LLC)" or 
+    "SunSGame LLC" or 
+    "SunSGame Ind" or 
+    "SunSGame Ind." or
+    "(of/by SunSGame Ind)" or
+    "(of/by SunSGame Ind.)") collects
     information
     from you in order to provide better service and give you a better user
     experience. We always put your privacy as the first consideration and
