--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -263,10 +263,10 @@
     object code, files, interface,
     GUI and trade secrets, whether or not registered or capable of being registered (excluding the User Generated
     Content) (collectively, "Intellectual Property"),
-    are owned by and/or licensed to SunSGame and are protected by applicable copyright and other intellectual property
+    are owned by and/or licensed to us and are protected by applicable copyright and other intellectual property
     laws and international conventions.
     Notwithstanding anything to the contrary herein, you agree that the Apps are licensed hereunder, not sold.
-    All rights not expressly granted to you hereunder are reserved by SunSGame and its licensors.
+    All rights not expressly granted to you hereunder are reserved by us and its licensors.
   </p>
   <h2>7. User Generated Content</h2>
   <p>
