--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -442,7 +442,7 @@
     THE ABOVE EXCLUSIONS AND LIMITATIONS MAY NOT APPLY.
   </p>
   <h2>17. Indemnification</h2>
-  <p>You agree to defend, indemnify and hold harmless SunSGamel LLCLLC, its vendors, including our and such vendors’ officers,
+  <p>You agree to defend, indemnify and hold harmless SunSGame LLC, its vendors, including our and such vendors’ officers,
     directors,
     employees, affiliates, subsidiaries, licensors, agents and suppliers from and against all claims, damages,
     obligations,
