--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -17,6 +17,7 @@
 <body>
   <h2>Apps(of/by SunSGame LLC)</h2>
   <h1>Privacy Policy</h1>
+  <p>Last Revised: October 31, 2020</p>
   <p>
     This Privacy Policy applies beginning September 9, 2020. You may change your
     consent anytime in our App Settings. Apps(of/by SunSGame LLC)
@@ -432,7 +433,7 @@
   </ul>
 
   <h3>Advertising (If used will be mentioned in the application)</h3>
-  <p>We may use third-party Service Providers to show advertisements to you to help support and maintain our Service.
+  <p>We may use third-party(5.) Service Providers to show advertisements to you to help support and maintain our Service.
   </p>
   <p>
     For European Union’s General Data Protection Regulation (GDPR). If App not show dialog consent and you is user
