--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -592,6 +592,14 @@
           rel="external nofollow noopener" target="_blank">https://www.tapjoy.com/legal/players/users-terms-of-service/</a>
       </p>
     </li>
+    <li>
+      <p><strong>a12. Ads by Applovin</strong></p>
+      <p>Their Privacy Policy can be viewed at 
+        <a href="https://www.applovin.com/privacy/" rel="external nofollow noopener" target="_blank">
+          https://www.applovin.com/privacy/
+        </a>
+      </p>
+    </li>
   </ul>
 
   <h3>Payments (If used will be mentioned in the application)</h3>
