--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
   </style>
-  <script data-ad-client="ca-pub-9995551687404421" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <h1 style="text-align: center;">&nbsp;</h1>
 <h1 style="text-align: center;"><span style="color: #0000ff;"><u>SunSGame LLC</u></span></h1>
+<h2 style="text-align: center;">
+  <a href="https://sunsgames.github.io/PrivacyPolicy.html" rel="external nofollow noopener" target="_blank">
+    Privacy Policy
+</a>
+</h2>
 <h2 style="text-align: center;">Coming soon...</h2>
 <br>
 <h2 style="text-align: center;"><p></p></h2>
