--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -225,7 +225,7 @@
     (s) For App sold through the distributor either and/or directly and/or indirectly by us. When refunding an App after installation, you are required to delete all backups and installed on other devices downloaded and installed by you or your account, you are not allowed to keep any copies. copy of the application and reuse it.
     If you reuse when you refund the app the amount you compensate us will be charged = amount of the app sale x number of days you reuse.
     (t);except for available functions of the device and/or operating system and/or by a (SDK) and/or third party. ideas and / or functions and / or features in the application are exclusively owned by SunSGame, for any purpose you may not steal and / or disseminate and / or reproduce ideas and functions. functionality and / or in-app features for third parties or / and are intended by you for the purpose of reproducing and / or rebuilding the application with the same idea and / or functionality and / or functionality as the intended application. owned by us.
-    (u)We take measures to deal with malicious people when they spam clicks on ads in the app. The first thing to do if it violates the policies of us or the advertising network partner. We will block in app.
+    (u)Not allowed repeated or/and continuous ad clicks in app.
   </p>
 
   <h2>5. License to use our Apps</h2>
