--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -17,7 +17,7 @@
 <body>
   <h2>Apps(of/by SunSGame LLC)</h2>
   <h1>Privacy Policy</h1>
-  <p>Last Revised: November 9, 2020</p>
+  <p>Last Revised: November 26, 2020</p>
   <p>
     This Privacy Policy applies beginning September 9, 2020. You may change your
     consent anytime in our App Settings. Apps(of/by SunSGame LLC)
@@ -458,7 +458,10 @@
         <a href="https://support.google.com/adsense/answer/7666366?hl=en" rel="external nofollow noopener"
           target="_blank">https://support.google.com/adsense/answer/7666366?hl=en</a>
       </p>
-
+      <p>Help with the EU user consent policy can be viewed at
+        <a href="https://www.google.com/about/company/user-consent-policy-help/" rel="external nofollow noopener"
+          target="_blank">https://www.google.com/about/company/user-consent-policy-help/</a>
+      </p>
     </li>
     <li>
       <p><strong>a2. AdMob by Google</strong></p>
@@ -475,6 +478,10 @@
       <p>Their GDPR Privacy Policy can be viewed at
         <a href="https://support.google.com/admob/answer/7666366?hl=en" rel="external nofollow noopener"
           target="_blank">https://support.google.com/admob/answer/7666366?hl=en</a>
+      </p>
+      <p>Help with the EU user consent policy can be viewed at
+        <a href="https://www.google.com/about/company/user-consent-policy-help/" rel="external nofollow noopener"
+          target="_blank">https://www.google.com/about/company/user-consent-policy-help/</a>
       </p>
     </li>
     <li>
