--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -266,7 +266,7 @@
     Where the use of your information is based on consent, you can withdraw
     this consent at any time without affecting the lawfulness of processing
     based on consent before its withdrawal. Requests should be submitted by
-    contacting us through [sunsgamesstudio@gmail.com].
+    contacting us through [servicessunsgames@gmail.com].
   </p>
   <p></p>
   <p>
@@ -690,7 +690,7 @@
     relevant information as quickly as possible. If you believe that we might
     have any information from a child under 13(or such legally required age of
     consent for Juveniles as defined under applicable laws), please contact us
-    at sunsgamesstudio@gmail.com
+    at servicessunsgames@gmail.com
   </p>
   <h3>
     13. Contacting Us
@@ -699,7 +699,7 @@
     If you have any questions or comments about this Policy or our privacy
     practices, or to report any violations of the Policy or abuse of an
     Application, the Services or the Site, please contact us at
-    sunsgamesstudio@gmail.com
+    servicessunsgames@gmail.com
   </p>
   <h3>
     14. Changes to This Privacy Policy
