--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -93,34 +93,31 @@
       e. Information we collect as you use Application, such as certain Location
       Data and Log Data.
       <ul>
+         <li>
+          <p>
+            1. "<b>Device Attributes</b>" is information such as the operating system, hardware and software version, platform, screen size, CPU/Graphics characteristics.
+          </p>
+        </li>
         <li>
           <p>
-            1. "Location Data" is information that we collect regarding your
-            location (when you use a location-enabled service), including:
+            2. "<b>In-App purchase Data</b>" if you perform financial transaction (such as when you make a purchase in a game or app) we collect information about the purchase. This includes purchase amounts and number of purchases
           </p>
-
+        </li>
+        <li>
           <p>
-            the location of your device when you use Application, such as from
+            3. "<b>Location Data</b>" is information that we collect regarding your
+            location (when you use a location-enabled service), including:the location of your device when you use Application, such as from
             the GPS, Wi-Fi, compass, accelerometer or other sensors in your
-            mobile device;
-          </p>
-
-          <p>
-            the IP address of the device or internet service you use to access
-            Application; and
-          </p>
-
-          <p>
-            other information made available by you or others that gives an
+            mobile device;the IP address of the device or internet service you use to access
+            Application; and other information made available by you or others that gives an
             indication as to where you are or have been located, such as
             account information that indicates where you are located, and
-            shared information that you or others post which indicates your
-            location.
+            shared information that you or others post which indicates your location.
           </p>
         </li>
 
         <li>
-          2. "Log Data" is technical information that is automatically collected
+          4. "<b>Log Data</b>" is technical information that is automatically collected
           by us when you use Application, whether through the use of cookies,
           web beacons, log files, scripts and e-tags or otherwise, including:
           Technical information, such as your mobile carrier-related
@@ -130,29 +127,30 @@
         </li>
       </ul>
     </li>
-  </ul>
-  <p>
+    <li>
     g.Information about what you have searched for and looked at while using
     Application, such as web search terms used, social media profiles visited
     and details of other information and content accessed or requested by you
     in using Application;
-  </p>
+  </li>
 
-  <p>
+  <li>
     h. Information about communications you have made using Application, such as
     the people you've communicated with and the time, data and duration of
     your communications; and
-  </p>
+  </li>
 
-  <p>
+  <li>
     t. Metadata, which means information related to ps you have made available
     through Application, such as the date, time or location that a shared
     photograph or video was taken or posted.
-  </p>
-  <p>
+  </li>
+  <li>
     m. The app does use third party services that may collect
     information used to identify you.
-  </p>
+  </li>
+  </ul>
+  
   <p>
     2.2 Non-Personal Information<br>
     Non-Personal Information is any information that relates to you but from
