--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -635,6 +635,18 @@
           href="https://www.paypal.com/en/webapps/mpp/ua/privacy-full" rel="external nofollow noopener"
           target="_blank">https://www.paypal.com/en/webapps/mpp/ua/privacy-full</a></p>
     </li>
+    <li>
+      <p><strong>Unity IAP (Unity In App Purchases)</strong></p>
+      <p>Their Privacy Policy can be viewed at <a
+          href="https://unity3d.com/legal/privacy-policy" rel="external nofollow noopener"
+          target="_blank">https://unity3d.com/legal/privacy-policy</a></p>
+    </li>
+    <li>
+      <p><strong>Samsung In-App Purchase (IAP) </strong></p>
+      <p>Their Privacy Policy can be viewed at <a
+          href="https://www.samsung.com/us/account/privacy-policy/" rel="external nofollow noopener"
+          target="_blank">https://www.samsung.com/us/account/privacy-policy/</a></p>
+    </li>
   </ul>
   <h3>
     9. Transfer of Data
